reworked on spacing issue

--- a/vtr-ui/src/app/components/widgets/widget-quicksettings/widget-quicksettings.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-quicksettings/widget-quicksettings.component.scss
@@ -4,5 +4,5 @@
 	color: $main_dark;
 	color: $main_darker;
 	font-size: 3.5rem;
-	margin-bottom: 3.5rem;
+	margin-bottom: 4.5rem;
 }
